# otus

./: Dockerfile  Makefile  Otus app-1688974230698.json  README.md  allinone.postman_collection.json  app.js  minikube.postman_environment.json  package-lock.json  package.json  pyproject.toml  skaffold.yaml
cicd/helm/: nginx_ingress.yaml  postgres_values.yaml  prometheus_values.yaml
cicd/kubernetes/: deployment.yaml  ingress.yaml  job.yaml  otus-configmap.yaml  otus-secret.yaml  pod-monitor.yaml
kubernetes/: deployment.yaml  ingress.yaml  service.yaml
otus/: config.json  manage.py  postgres.json
otus/kubernetes/: apps.py  models.py  serializers.py  views.py
otus/kubernetes/migrations/: 0001_initial.py
otus/main/: asgi.py  settings.py  urls.py  wsgi.py
